# polynomial-calc

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compile.sh  main.cpp
benchmark/: CMakeLists.txt
benchmark/src/: bench_arith.cpp  bench_bignum.cpp  bench_exp_mod.cpp  bench_ntt.cpp
examples/: ckks.cpp  encodecheck.cpp  encrypt.cpp  euklidian.cpp  examples_utils.h  exp-test.cpp  exp_vect.cpp  fft-ssa.cpp  fntt.cpp  generateprime.cpp  main.cpp  montgomery.cpp  new-mod-mul.cpp  ntt-ssa.cpp  ntt.cpp  ntt_example.cpp  polymath_performance.cpp  polynomial.cpp  polynomial_arith.cpp  polynomial_example.cpp  polynomial_serialization.cpp  rlwe.cpp  stockham.cpp  utils.h
src/: CMakeLists.txt
src/include/: encode.h  math.h  ntmath.h  ntt.h  poly.h  polymath.h  polynomial.h  utils.h  vectbigint.h
src/lib/: encode.cpp  math.cpp  ntmath.cpp  ntt.cpp  poly.cpp  polymath.cpp  polynomial.cpp  vectbigint.cpp
